# optionvisualizer

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
notebooks/: 2D Greeks Graphs.ipynb  3D Greeks Graphs - Static.ipynb  Option Payoff Graphs.ipynb  Option Prices and Greeks.ipynb
optionvisualizer/: __init__.py  animated_gifs.py  barriers.py  greeks.py  greeks_2d.py  greeks_3d.py  models.py  multi_payoffs.py  option_formulas.py  sensitivities.py  simple_payoffs.py  utilities.py  visualizer.py  visualizer_params.py
pricer/: models.py  pricer.py  visualizer.py
tests/: vis_unittest_analytical_sens.py  vis_unittest_graphical.py  vis_unittest_numerical.py  vis_unittest_numerical_sens.py
