[metadata]
name = optionvisualizer

url = https://github.com/GBERESEARCH/optionvisualizer

author = GBERESEARCH
author_email = gberesearch@gmail.com
version = attr: optionvisualizer.__version__

description = Visualize option prices and sensitivities.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir=
    =src
packages=find:

install_requires = 
    numpy >= 1.16.2
    scipy >= 1.4.1 
    matplotlib >= 3.6.* 
    plotly >= 4.3.0  
    pillow >= 5.4.1

[options.packages.find]
where=src